Fix document preview scrollbar offset.

--- a/src/scss/_macros/_modal.scss
+++ b/src/scss/_macros/_modal.scss
@@ -891,6 +891,7 @@
     flex-direction: column;
     padding-top: 100px;
     padding-bottom: 92px;
+    right: -17px;
 
     .c-modal__heading {
       z-index: 100;
@@ -898,7 +899,7 @@
       display: flex;
       top: 20px;
       left: 0;
-      right: 0;
+      right: 17px;
       width: 100%;
       max-width: 1047px;
       min-height: 60px;
@@ -976,7 +977,7 @@
       position: fixed;
       display: flex;
       left: 0;
-      right: 0;
+      right: 17px;
       bottom: 20px;
       width: 100%;
       max-width: 406px;
